--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port = 8082
 
 # Database connection settings
-spring.datasource.url=jdbc:mysql://localhost:3306/techjobs
-spring.datasource.username=techjobs
-spring.datasource.password=tech
+spring.datasource.url=jdbc:mysql://localhost:3306/techjobs-auth
+spring.datasource.username=techjobs-auth
+spring.datasource.password=auth
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
