--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port = 8082
 
 # Database connection settings
-spring.datasource.url=jdbc:mysql://localhost:3306/techjobs-auth
-spring.datasource.username=techjobs-auth
+spring.datasource.url=jdbc:mysql://localhost:3306/techjobs_auth
+spring.datasource.username=techjobs_auth
 spring.datasource.password=auth
 
 # Specify the DBMS
